--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,6 @@
 @use './config-scss/variables.scss';
 @use './config-scss/reset.scss';
-@use './config-scss/rem-calc.scss';
+@use './config-scss/rem-calc.scss' as rem-calc;
 
 html {
   font-family: 'Roboto', sans-serif;
@@ -8,7 +8,7 @@ html {
 }
 
 main {
-  max-width: rem-calc(600);
+  max-width: rem-calc.rem-calc(600);
   margin: 0 auto;
   box-sizing: border-box;
 }
