--- a/src/config-scss/variables.scss
+++ b/src/config-scss/variables.scss
@@ -3,4 +3,6 @@
 
   --primary-color: #262835;
   --secondary-color: #FF5473;
+
+  --gray: #EFEFEF;
 } // com o root, nao precisa importar as variaveis para outros lugares
