Services, pipe operators

--- a/src/app/shared/poke-list/poke-list.component.scss
+++ b/src/app/shared/poke-list/poke-list.component.scss
@@ -5,6 +5,7 @@ $padding-20: rem-calc.rem-calc(20);
 :host {
   display: flex;
   justify-content: space-between;
+  padding: $padding-20 0;
 
   .pokemon {
     position: relative;
