--- a/src/app/shared/poke-list/poke-list.component.scss
+++ b/src/app/shared/poke-list/poke-list.component.scss
@@ -6,6 +6,7 @@ $padding-20: rem-calc.rem-calc(20);
   display: flex;
   justify-content: space-between;
   padding: $padding-20 0;
+  flex-wrap: wrap;
 
   .pokemon {
     position: relative;
@@ -15,6 +16,7 @@ $padding-20: rem-calc.rem-calc(20);
     background: var(--white);
     border-radius: rem-calc.rem-calc(10);
     padding: $padding-20;
+    margin-bottom: rem-calc.rem-calc(10);
 
     &__status {
       h2 {
@@ -22,6 +24,7 @@ $padding-20: rem-calc.rem-calc(20);
         font-style: italic;
         font-weight: 700;
         margin-bottom: rem-calc.rem-calc(10);
+        text-transform: capitalize;
       }
 
       ul {
@@ -54,7 +57,7 @@ $padding-20: rem-calc.rem-calc(20);
       justify-content: center;
 
       img {
-        width: rem-calc.rem-calc(80);
+        width: rem-calc.rem-calc(65);
       }
     }
   }
