--- a/src/app/shared/poke-list/poke-list.component.html
+++ b/src/app/shared/poke-list/poke-list.component.html
@@ -1,14 +1,18 @@
-<ng-template ngFor let-pokemon [ngForOf]="getAllPokemons">
-  <a [routerLink]="[ 'details', pokemon.status.id]" class="pokemon" *ngIf="pokemon.status">
-    <section class="pokemon__status">
-      <h2>{{pokemon.name}}</h2>
-      <ul>
-        <li *ngFor="let item of pokemon.status.types">{{item.type.name}}</li>
-      </ul>
-    </section>
+<app-poke-search></app-poke-search>
 
-    <section class="pokemon__image">
-      <img [src]="pokemon.status.sprites.other.dream_world.front_default" [alt]="pokemon.name">
-    </section>
-  </a>
-</ng-template>
+<section class="list">
+  <ng-template ngFor let-pokemon [ngForOf]="getAllPokemons">
+    <a [routerLink]="[ 'details', pokemon.status.id]" class="pokemon" *ngIf="pokemon.status">
+      <section class="pokemon__status">
+        <h2>{{pokemon.name}}</h2>
+        <ul>
+          <li *ngFor="let item of pokemon.status.types">{{item.type.name}}</li>
+        </ul>
+      </section>
+
+      <section class="pokemon__image">
+        <img [src]="pokemon.status.sprites.other.dream_world.front_default" [alt]="pokemon.name">
+      </section>
+    </a>
+  </ng-template>
+</section>
