--- a/src/app/shared/poke-list/poke-list.component.scss
+++ b/src/app/shared/poke-list/poke-list.component.scss
@@ -3,63 +3,65 @@
 $padding-20: rem-calc.rem-calc(20);
 
 :host {
-  display: flex;
-  justify-content: space-between;
-  padding: $padding-20 0;
-  flex-wrap: wrap;
-
-  .pokemon {
-    position: relative;
+  .list{
     display: flex;
-    width: calc(49% - 2.5rem);
-    height: rem-calc.rem-calc(157 - 40);
-    background: var(--white);
-    border-radius: rem-calc.rem-calc(10);
-    padding: $padding-20;
-    margin-bottom: rem-calc.rem-calc(10);
-    text-decoration: none;
-    color: var(--primary-color);
+    justify-content: space-between;
+    padding: $padding-20 0;
+    flex-wrap: wrap;
 
-    &__status {
-      h2 {
-        font-size: rem-calc.rem-calc(22);
-        font-style: italic;
-        font-weight: 700;
-        margin-bottom: rem-calc.rem-calc(10);
-        text-transform: capitalize;
-      }
+    .pokemon {
+      position: relative;
+      display: flex;
+      width: calc(49% - 2.5rem);
+      height: rem-calc.rem-calc(157 - 40);
+      background: var(--white);
+      border-radius: rem-calc.rem-calc(10);
+      padding: $padding-20;
+      margin-bottom: rem-calc.rem-calc(10);
+      text-decoration: none;
+      color: var(--primary-color);
 
-      ul {
-        display: flex;
-        flex-direction: column;
+      &__status {
+        h2 {
+          font-size: rem-calc.rem-calc(22);
+          font-style: italic;
+          font-weight: 700;
+          margin-bottom: rem-calc.rem-calc(10);
+          text-transform: capitalize;
+        }
 
-        li {
-          background: var(--gray);
-          font-size: rem-calc.rem-calc(10);
+        ul {
           display: flex;
-          justify-content: center;
-          align-items: center;
-          border-radius: rem-calc.rem-calc(50);
-          width: rem-calc.rem-calc(60);
-          padding: rem-calc.rem-calc(5);
-          margin-bottom: rem-calc.rem-calc(5);
+          flex-direction: column;
+
+          li {
+            background: var(--gray);
+            font-size: rem-calc.rem-calc(10);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            border-radius: rem-calc.rem-calc(50);
+            width: rem-calc.rem-calc(60);
+            padding: rem-calc.rem-calc(5);
+            margin-bottom: rem-calc.rem-calc(5);
+          }
         }
       }
-    }
 
-    &__image {
-      position: absolute;
-      height: rem-calc.rem-calc(90);
-      width: rem-calc.rem-calc(110);
-      bottom: $padding-20;
-      right: $padding-20;
-      background: url('../../../assets/bg/pokemos-list-bg.svg');
-      display: flex;
-      align-items: center;
-      justify-content: center;
+      &__image {
+        position: absolute;
+        height: rem-calc.rem-calc(90);
+        width: rem-calc.rem-calc(110);
+        bottom: $padding-20;
+        right: $padding-20;
+        background: url('../../../assets/bg/pokemos-list-bg.svg');
+        display: flex;
+        align-items: center;
+        justify-content: center;
 
-      img {
-        width: rem-calc.rem-calc(65);
+        img {
+          width: rem-calc.rem-calc(65);
+        }
       }
     }
   }
