--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,7 @@
 @use './config-scss/variables.scss';
 @use './config-scss/reset.scss';
 @use './config-scss/rem-calc.scss' as rem-calc;
+@use './config-scss/btn.scss';
 
 html {
   font-family: 'Roboto', sans-serif;
