--- a/src/app/shared/poke-list/poke-list.component.html
+++ b/src/app/shared/poke-list/poke-list.component.html
@@ -15,4 +15,12 @@
       </section>
     </a>
   </ng-template>
+
+
+  <img
+    src="assets/error.svg"
+    alt="Pokemon image not found"
+    width="100%"
+    *ngIf="apiError"
+  >
 </section>
