--- a/src/app/shared/poke-list/poke-list.component.html
+++ b/src/app/shared/poke-list/poke-list.component.html
@@ -2,7 +2,7 @@
 
 <section class="list">
   <ng-template ngFor let-pokemon [ngForOf]="getAllPokemons">
-    <a [routerLink]="[ 'details', pokemon.status.id]" class="pokemon" *ngIf="pokemon.status">
+    <a [routerLink]="[ 'details', pokemon.status.id]" class="pokemon fadeIn" *ngIf="pokemon.status">
       <section class="pokemon__status">
         <h2>{{pokemon.name}}</h2>
         <ul>
