update angular and add infinite scroll

--- a/src/app/shared/poke-list/poke-list.component.html
+++ b/src/app/shared/poke-list/poke-list.component.html
@@ -1,6 +1,11 @@
 <app-poke-search (emitSearch)="getFilteredPokemonList($event)"></app-poke-search>
 
-<section class="list">
+<section
+  class="list"
+  infiniteScroll
+  [infiniteScrollDistance]="2"
+  (scrolled)="onScroll()"
+>
   <ng-template ngFor let-pokemon [ngForOf]="getAllPokemons">
     <a [routerLink]="[ 'details', pokemon.status.id]" class="pokemon fadeIn" *ngIf="pokemon.status">
       <section class="pokemon__status">
