--- a/src/app/shared/poke-list/poke-list.component.html
+++ b/src/app/shared/poke-list/poke-list.component.html
@@ -16,7 +16,7 @@
       </section>
 
       <section class="pokemon__image">
-        <img [src]="pokemon.status.sprites.other.dream_world.front_default" [alt]="pokemon.name">
+        <img *ngIf="pokemon.status.sprites.other.dream_world.front_default" [src]="pokemon.status.sprites.other.dream_world.front_default" [alt]="pokemon.name">
       </section>
     </a>
   </ng-template>
